--- a/src/app/currency-converter/currency-converter.component.html
+++ b/src/app/currency-converter/currency-converter.component.html
@@ -1,24 +1,106 @@
-<mat-drawer-content>
-    <div class="example-sidenav-content" fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="space-evenly center">
-      <mat-card class="example-card" *ngFor="let i of [].constructor(10)">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image" fxLayoutAlign.xs="center center"></div>
-          <mat-card-title>Shiba Inu</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-          alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
-      </mat-card>
+
+
+<div class="loader" *ngIf="loading">
+    <mat-spinner >
+    </mat-spinner>
+</div>
+
+<div class="full-container">
+    <div fxLayout="row wrap" fxLayoutGap="20px grid">
+
+        <div fxFlex="35" fxFlex.xs="100" fxFlex.sm="100">
+            <form [formGroup]="currencyConverterForm">
+                <mat-card>
+                    <div>
+                        <h2>
+                            Currency Converter
+                        </h2>
+                    </div>
+                        
+                    <div fxLayout="row wrap" fxLayoutGap="32px grid" >
+                        <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50">
+                            <mat-form-field appearance="fill">
+                                <mat-label>Amount</mat-label>
+                                <input matInput formControlName="baseAmountValue" (change)="reCalculate()">
+                              </mat-form-field> 
+                        </div>
+                           
+                        <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50">
+                            <mat-form-field appearance="fill">
+                                <mat-label>Currency</mat-label>
+                                <mat-select formControlName="baseCurrencyValue" (selectionChange)="reCalculate()">
+                                    <mat-option [value]="currency.id" *ngFor="let currency of allCurrencies; let i=index">{{currency.currencyName}}</mat-option>
+                                </mat-select>
+                              </mat-form-field> 
+                        </div>  
+                     </div>
+                     <div fxLayout="row wrap" fxLayoutGap="32px grid" >
+
+                        <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50">
+                        <mat-form-field appearance="fill">
+                            <mat-label>Amount</mat-label>
+                            <input matInput formControlName="targetAmountValue" (change)="reCalculate('base')">
+                          </mat-form-field>   
+                          </div>
+
+                          <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50">
+                            <mat-form-field appearance="fill">
+                                <mat-label>Currency</mat-label>
+                                <mat-select formControlName="targetCurrencyValue" (selectionChange)="reCalculate('base')">
+                                  <mat-option [value]="currency.id" *ngFor="let currency of allCurrencies; let i=index">{{currency.currencyName}}</mat-option>
+                                </mat-select>
+                              </mat-form-field>
+                          </div>
+                           
+                     </div>
+
+                     <div *ngIf="currencyConverterForm.valid" fxLayout="column" fxLayoutAlign="space-around center">
+                        <em>{{formatDigits(+baseDisplayValue)}} {{baseValueSymbol}} to {{targetValueSymbol}} = {{formatDigits(+targetDisplayValue)}} {{targetValueSymbol}}</em>
+                     </div>
+                </mat-card>
+            </form>
+        </div>
+    
+      
+            <div fxFlex="65" fxFlex.xs="100" fxFlex.sm="100">
+                <mat-card>
+                    <div>
+                        <h2>
+                           Rate History<ng-container *ngIf="baseTarget">: <em>{{baseTarget}}</em></ng-container>
+                        </h2>
+                    </div>
+                    <div fxLayout="row wrap" fxLayoutGap="32px grid" >
+                        <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50">
+                            <table mat-table [dataSource]="historicalData" >                  
+                    
+                                <!-- Date Column -->
+                                <ng-container matColumnDef="Date">
+                                    <th mat-header-cell *matHeaderCellDef> Date </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+                                </ng-container>
+                                
+                                <!-- Amount Column -->
+                                <ng-container matColumnDef="Amount">
+                                    <th mat-header-cell *matHeaderCellDef> Amount </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+                                </ng-container>
+                                
+                                
+                                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                            </table>
+                         
+                        </div>
+
+                        <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50" id="chart-container">
+                                <div id="chart"></div>
+                        </div>
+
+                    </div>
+                </mat-card>
+            </div>
+           
     </div>
-    </mat-drawer-content>
+</div>
+
+    
