--- a/src/app/unit-converter/unit-converter.component.html
+++ b/src/app/unit-converter/unit-converter.component.html
@@ -1,24 +1,135 @@
-<mat-drawer-content>
-    <div class="example-sidenav-content" fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="space-evenly center">
-      <mat-card class="example-card" *ngFor="let i of [].constructor(10)">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image" fxLayoutAlign.xs="center center"></div>
-          <mat-card-title>Shiba Inu</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-          alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
-      </mat-card>
+
+
+<div class="full-container">
+    <div fxLayout="row wrap" fxLayoutGap="20px grid">
+
+        <div fxFlex="35" fxFlex.xs="100" fxFlex.sm="100">
+            <form [formGroup]="unitConverterForm">
+                <mat-card>
+                    <div>
+                        <h2>
+                            Unit Converter
+                        </h2>
+                    </div>
+                        
+                    <div fxLayout="row wrap" fxLayoutGap="32px grid" >
+                        <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50">
+                            <mat-form-field appearance="fill">
+                                <mat-label>Value</mat-label>
+                                <input matInput formControlName="baseAmountValue" (change)="reCalculate()">
+                              </mat-form-field> 
+                        </div>
+                           
+                        <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50">
+                            <mat-form-field appearance="fill">
+                                <mat-label>Unit</mat-label>
+                                <mat-select formControlName="baseUnitValue" (selectionChange)="reCalculate()">
+                                    <mat-option [value]="unit.id" *ngFor="let unit of allUnits; let i=index">{{unit.unitName}}</mat-option>
+                                </mat-select>
+                              </mat-form-field> 
+                        </div>  
+                     </div>
+                     <div fxLayout="row wrap" fxLayoutGap="32px grid" >
+
+                        <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50">
+                        <mat-form-field appearance="fill">
+                            <mat-label>Value</mat-label>
+                            <input matInput formControlName="targetAmountValue" (change)="reCalculate('base')">
+                          </mat-form-field>   
+                          </div>
+
+                          <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50">
+                            <mat-form-field appearance="fill">
+                                <mat-label>Unit</mat-label>
+                                <mat-select formControlName="targetUnitValue" (selectionChange)="reCalculate('base')">
+                                  <mat-option [value]="unit.id" *ngFor="let unit of allUnits; let i=index">{{unit.unitName}}</mat-option>
+                                </mat-select>
+                              </mat-form-field>
+                          </div>
+                           
+                     </div>
+
+                     <div *ngIf="unitConverterForm.valid" fxLayout="column" fxLayoutAlign="space-around center">
+                        <em>{{formatDigits(+baseDisplayValue)}} {{baseValueSymbol}} = {{formatDigits(+targetDisplayValue)}} {{targetValueSymbol}}</em>
+                     </div>
+                </mat-card>
+            </form>
+        </div>
+    
+      
+            <div fxFlex="65" fxFlex.xs="100" fxFlex.sm="100">
+                <mat-card>
+                    <div>
+                        <h2>
+                           Units<ng-container *ngIf="baseTarget">: <em>{{baseTarget}}</em></ng-container>
+                        </h2>
+                    </div>
+                    <div fxLayout="row wrap" fxLayoutGap="32px grid" >
+                        <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50">
+                            <table mat-table [dataSource]="dataSource" >                  
+                    
+                                <!-- Unit Column -->
+                                <ng-container matColumnDef="Unit">
+                                    <th mat-header-cell *matHeaderCellDef> Unit </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.unitName}}</td>
+                                </ng-container>
+                                
+                                <!-- Symbol Column -->
+                                <ng-container matColumnDef="Symbol">
+                                    <th mat-header-cell *matHeaderCellDef> Symbol </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+                                </ng-container>
+
+                                   <!-- Actions Column -->
+                                   <ng-container matColumnDef="Actions">
+                                    <th mat-header-cell *matHeaderCellDef> Actions </th>
+                                    <td mat-cell *matCellDef="let element"> 
+                                        <button mat-raised-button class='icon-button' (click)="openConversionModal()">
+                                            Edit
+                                        <span matBadge="?" matBadgeOverlap="false" matBadgeColor="primary" *ngIf="!hasConversions(element)"></span>
+                                        </button> 
+                                    </td>
+                                </ng-container>
+                                
+                                
+                                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                            </table>
+                         
+                        </div>
+
+                        <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50" id="chart-container">
+
+                            <form [formGroup]="createUnitForm" (ngSubmit)="addUnit()">
+                                <div fxLayout="row wrap" fxLayoutGap="32px grid">
+                                    <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50">
+                                        <mat-form-field appearance="fill">
+                                            <mat-label>Unit</mat-label>
+                                            <input matInput formControlName="unitName">
+                                          </mat-form-field> 
+                                    </div>
+                                       
+                                    <div fxFlex="50" fxFlex.xs="100" fxFlex.sm="50">
+                                            <mat-form-field appearance="fill">
+                                                <mat-label>Symbol</mat-label>
+                                                <input matInput formControlName="id">
+                                        </mat-form-field> 
+                                    </div>  
+                                 </div>
+                                 <div fxLayout="column" fxLayoutAlign="space-around end">
+                                    <button type="submit" [disabled]="createUnitForm.invalid" mat-raised-button color="primary">Add Unit</button>
+                                 </div>
+                            </form>
+
+                        </div>
+
+
+                    
+                    </div>
+                </mat-card>
+            </div>
+           
     </div>
-    </mat-drawer-content>
+</div>
+
+    
