--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,66 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.content {
+    position: absolute;
+    top: 65px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    overflow-y: scroll;
+  
+  }
+  
+  .content-mob {
+    position: absolute;
+    top: 113px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    overflow-y: scroll;
+  
+  }
+  
+  .example-card {
+    max-width: 320px;
+    margin: 0px 5px 5px 0px;
+  }
+  
+  .example-header-image {
+    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-size: cover;
+  }
+  
+  mat-drawer {
+  
+    position: fixed;
+    background-color: rgb(236, 236, 236);
+  }
+  
+  .example-sidenav-content:first-child {
+    margin: 10px 5px 5px 5px;
+  }
+  
+  .list-width {
+    width: 200px;
+  
+  }
+  
+  .list-item:hover {
+    background-color: rgba(83, 83, 83, 0.178);
+    cursor: pointer;
+  }
+
+  .mat-table{
+    width: 100%;
+}
+
+.loader{
+    z-index: 10;
+    position: absolute;
+    top:20%;
+    right: 30%;
+    opacity: 0.2;
+    height: 100%;
+}
+  
